<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".CreatorFlow.Fragments.CreatorRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/app_font"
                android:hint="@string/Register_Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@string/app_font"
                android:hint="@string/Register_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNewRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@string/app_font"
                android:hint="@string/Register_re_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@string/app_font"
                android:text="@string/Register_sign_in"
                android:textColor="@color/black"
                app:backgroundTint="@color/buttons_background" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.9"
            android:src="@drawable/path_to_island" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>